# FloatingNumber

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: DoubleFunctions.h  DoubleType.h  FloatFunctions.h  FloatType.h  Timing.h  baseDefines.h  baseFunctions.h  baseType.h  bithack_Functions.h  rng.h  stdComputeStats.h  trickFunctions.h  union_Functions.h
src/: CMakeLists.txt  FloatType.cpp  stdComputeStats.cpp
test/GoogleTest/: CMakeLists.txt
test/UnitTests/: CMakeLists.txt  testHelper.h  test_algo_bench.cpp  test_algo_bench_rand.cpp  test_bithack_functions.cpp  test_double.cpp  test_double_functions.cpp  test_float.cpp  test_float_functions.cpp  test_random.cpp  test_random.h.cpp  test_stats.cpp  test_tricks.cpp  test_union_functions.cpp
